# kubescan

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  requirements-lock.txt  ruff.toml
.github/workflows/: ci.yml
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
kubescan/: README.md  pyproject.toml
kubescan/checkpoints/: trained
kubescan/src/kubescan/: __init__.py  cli.py  exceptions.py
kubescan/src/kubescan/model/: __init__.py  ga_ensemble.py  gat_encoder.py  rf_classifier.py
kubescan/src/kubescan/utils/: __init__.py  device_utils.py  graph_builder.py  yaml_parser.py
kubescan/tests/: conftest.py
kubescan/tests/fixtures/: make_fixtures.py
kubescan/tests/fixtures/checkpoints/: ga_weights.json  gnn_fold_0.pt  gnn_fold_1.pt  rf_model.skops
kubescan/tests/integration/: test_cli_scan.py
kubescan/tests/unit/: test_device_utils.py  test_ga_ensemble.py  test_graph_builder.py  test_properties.py  test_yaml_parser.py
research/: README.md
research/configs/: ga_config.yaml  gnn_config.yaml  rf_config.yaml
research/data/: DATASET.md
research/data/graphs/: CloudFlix.npz  (+89 more)
research/models/: evaluate_test_set.py  predict.py  provenance.py  run_ga_ensemble.py  run_rest_parallel.sh  train_gnn.py  train_rf.py
research/scripts/: snapshot_run_manifest.py
thesis/: generate_figures.py
thesis/latex/: bibliografia.bib  plantilla.tex
thesis/pdf/: Kubernetes_Security_ML.docx
(+49 files in other folders)
