[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubescan"
version = "0.1.0"
description = "Kubernetes attack-chain risk scanner using GNN + Random Forest ensemble"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Obed Rayo" }]

dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "scikit-learn>=1.3",
    "skops>=0.10",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[project.scripts]
kubescan = "kubescan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Checkpoints are NOT shipped inside the wheel: they live in
# research/models/checkpoints (symlinked at kubescan/checkpoints/trained).
# Point the CLI at them via --checkpoints-dir or KUBESCAN_CHECKPOINTS.

[tool.pytest.ini_options]
testpaths = ["tests"]
